--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
-title: <p align="center"> Sajan Kedia </p>
+title: <p align="center"> Vikas Gupta </p>
 logo: /assets/img/logo.png
 
 description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/sajan-kedia-b06a6821/">LinkedIn</a> |
-  <a href="https://github.com/sajankedia">GitHub</a>
+  <a href="https://www.linkedin.com/in/vikaskumar-gupta02/">LinkedIn</a> |
+  <a href="https://github.com/HackTheAI">GitHub</a>
   
   <br>   
-  I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
-  Also handing the Big Data from real-time Ad call data.
-  Worked with IBM Research at Big Data Analytics team.
-  Working in AdTech domain for 3 years.
+   I am data scientist having 3 year of experience in field of Energy Sector 
+   where I worked on Solar Renewables, Generation Thermal Power Plant and Electric Vehicles Charging 
+   along with Customer Centric Analytics by implementing Forecasting Model, Anomaly detection, NLP based analytics etc. 
+   Eagar to learn new concept in field of AI/ML and operation research 
+   to solve complex problem of real world.
   <br>
   </p>
 
